--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "goals-achiever",
   "type": "module",
+  "license": "MIT",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
