--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-mailjet": "^6.0.5",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
