--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ CUSTOMER_SUPPORT_EMAIL=
 CLOUNDINARY_CLOUD_NAME=
 CLOUNDINARY_API_KEY=
 CLOUNDINARY_API_SECRET=
+CLOUNDINARY_ASSETS_FOLDER=
 
 MJ_APIKEY_PUBLIC=
 MJ_APIKEY_PRIVATE=
