--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "node ./server.js",
-    "dev": "nodemon ./server.js"
+    "start": "npm run build && node ./dist/server.js",
+    "build": "npm run clear && tsc",
+    "clear": "rimraf ./dist",
+    "dev": "nodemon ./dist/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -21,6 +23,16 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.12.7",
+    "@types/swagger-ui-express": "^4.1.6",
+    "nodemon": "^3.0.2",
+    "typescript": "^5.4.5"
   }
 }
