--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "npm run build && node ./dist/server.js",
     "build": "npm run clear && tsc",
     "clear": "rimraf ./dist",
-    "dev": "nodemon ./dist/server.js"
+    "dev": "tsc-watch -p tsconfig.json --onSuccess \"npm run server\"",
+    "server": "node ./dist/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -33,6 +34,7 @@
     "@types/node": "^20.12.7",
     "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.0.2",
+    "tsc-watch": "^6.2.0",
     "typescript": "^5.4.5"
   }
 }
